{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 236,
  "lineage": "4379a343-2940-3813-5201-9e0f2d5c48a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "urotaxiec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024c319d5d14b463e",
            "arn": "arn:aws:ec2:ap-south-1:837221802507:instance/i-06afa8e0628b099dd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06afa8e0628b099dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "urotaxikp_name",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-075938a83f1a06019",
            "private_dns": "ip-10-0-1-95.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.95",
            "public_ip": "3.6.40.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa1e11a9736fe930",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-005cf68bee11a7dde"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0762ef7bf994e3883",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005cf68bee11a7dde"
            ]
          },
          "dependencies": [
            "aws_key_pair.urotaxikp",
            "aws_security_group.urotaxijavaserversg",
            "aws_subnet.urotaxi_pubsn1",
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "urotaxiig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:837221802507:internet-gateway/igw-04252c3fb1848f0ac",
            "id": "igw-04252c3fb1848f0ac",
            "owner_id": "837221802507",
            "tags": {
              "Name": "urotaxiig"
            },
            "tags_all": {
              "Name": "urotaxiig"
            },
            "vpc_id": "vpc-025127879744a5538"
          },
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "urotaxirt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:837221802507:route-table/rtb-02e2a4b29f07a1c54",
            "id": "rtb-02e2a4b29f07a1c54",
            "owner_id": "837221802507",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04252c3fb1848f0ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "urotaxirt"
            },
            "tags_all": {
              "Name": "urotaxirt"
            },
            "timeouts": null,
            "vpc_id": "vpc-025127879744a5538"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.urotaxiig",
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "urotaxiigrtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0022720fab54b230f",
            "route_table_id": "rtb-02e2a4b29f07a1c54",
            "subnet_id": "subnet-0762ef7bf994e3883"
          },
          "dependencies": [
            "aws_internet_gateway.urotaxiig",
            "aws_route_table.urotaxirt",
            "aws_subnet.urotaxi_pubsn1",
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "urotaxidbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:837221802507:security-group/sg-00abd8ea826b702fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00abd8ea826b702fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20231012144901619600000001",
            "name_prefix": "terraform-",
            "owner_id": "837221802507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "urotaxidbsg"
            },
            "tags_all": {
              "Name": "urotaxidbsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-025127879744a5538"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "urotaxijavaserversg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:837221802507:security-group/sg-005cf68bee11a7dde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005cf68bee11a7dde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20231012144901625500000002",
            "name_prefix": "terraform-",
            "owner_id": "837221802507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "urotaxijavaserversg"
            },
            "tags_all": {
              "Name": "urotaxijavaserversg"
            },
            "timeouts": null,
            "vpc_id": "vpc-025127879744a5538"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "urotaxi_prvsn3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:837221802507:subnet/subnet-098761666d4c8cb20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098761666d4c8cb20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837221802507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "urotaxi_prvsn3"
            },
            "tags_all": {
              "Name": "urotaxi_prvsn3"
            },
            "vpc_id": "vpc-025127879744a5538"
          },
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "urotaxi_prvsn4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:837221802507:subnet/subnet-004854382f82d534f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004854382f82d534f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837221802507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "urotaxi_prvsn4"
            },
            "tags_all": {
              "Name": "urotaxi_prvsn4"
            },
            "vpc_id": "vpc-025127879744a5538"
          },
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "urotaxi_pubsn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:837221802507:subnet/subnet-0762ef7bf994e3883",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0762ef7bf994e3883",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "837221802507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "urotaxi_pubsn1"
            },
            "tags_all": {
              "Name": "urotaxi_pubsn1"
            },
            "vpc_id": "vpc-025127879744a5538"
          },
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "urotaxivpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:837221802507:vpc/vpc-025127879744a5538",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01902d983e334c3e3",
            "default_route_table_id": "rtb-01210424a112a7027",
            "default_security_group_id": "sg-0431d2c2b6f1a6fee",
            "dhcp_options_id": "dopt-0a8250d11159a4c0e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025127879744a5538",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01210424a112a7027",
            "owner_id": "837221802507",
            "tags": {
              "Name": "urotaxivpc"
            },
            "tags_all": {
              "Name": "urotaxivpc"
            }
          }
        }
      ]
    }
  ]
}